Implementacao deleteLogin
